# vixa-system-config-be

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260703_0305_570702d1f582_initial_schema.py  20260703_0309_d45ebfc59718_audit_log_immutability_trigger.py  20260703_0846_6ffb5af5dec7_add_oidc_status_fields_to_engine_.py  20260703_1108_6aef05f18fd0_add_attestation_runs.py  20260703_1147_d8148ec2aa08_widen_byte_size_columns_to_bigint.py  20260703_1149_89569d590a49_audit_log_sequence_as_identity_column.py  20260703_1400_4bb68c116149_add_refresh_tokens.py  20260703_1500_a7f3c9b2e1d4_add_tenant_members_and_password_reset_tokens.py  20260703_1600_b2c4d6e8f012_add_compliance_assessments.py  20260703_1700_c3d5e7f9a1b2_add_compliance_score_snapshots.py  20260703_1800_d4e6f8a0b1c3_add_security_providers_and_operations.py  20260703_1900_e5f7a9c1b3d5_add_configurations.py  20260707_1000_f6a8b0c2d4e6_add_rbac_tables.py  20260707_1010_a1b3c5d7e9f1_add_notifications_and_alert_rules.py  20260707_1020_b2c4d6e8f0a2_add_operations_tables.py
app/: main.py
docs/: API_INVENTORY.md  ARCHITECTURE.md
scripts/: seed_data.py
tests/: conftest.py  test_anomalies.py  test_audit_chain.py  test_audit_log_screen_integration.py  test_auth.py  test_compliance.py  test_config_audit_atomicity.py  test_config_versions.py  test_cross_module_integration.py  test_health.py  test_hsm.py  test_module_gaps.py  test_new_endpoints.py  test_notifications.py  test_operations.py  test_rbac.py  test_schema_validation.py
(+59 files in other folders)
