[project]
name = "vsc-be"
version = "0.1.0"
description = "Nexus Engine backend — HSM-secured, multi-tenant control-plane API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy>=2.0.35,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.13,<1.14",
    "pydantic>=2.9,<3.0",
    "pydantic[email]>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<1.8",
    "bcrypt==4.0.1",
    "cryptography>=43.0,<44.0",
    "python-multipart>=0.0.12,<0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
    "aiosqlite>=0.20,<0.21",
    "ruff>=0.7,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
